# card-game-platform

./: README.md
django/: .dockerignore  .env.example  Dockerfile  README.md  gotogit.sh  manage.py  requirements.txt  setup.py  test_delete.sh  test_get.sh  test_post.sh  test_put.sh
dotnet/: .dockerignore  Dockerfile  README.md  cards_project.sln  setup.sh  test_delete.sh  test_get.sh  test_post.sh  test_put.sh
express/: Dockerfile  README.md  jest.config.cjs  jest.config.ts  package.json  setup.sh  test_delete.sh  test_get.sh  test_post.sh  test_put.sh
fastApi/: .dockerignore  README.md  requirements.txt  setup.py  setup.sh  test_delete.sh  test_post.sh  test_put.sh
gin/: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  main.go  setup.sh  test_get.sh  test_post.sh  test_put.sh
laravel/: .env.example  Dockerfile  README.md  composer.json  gotogit.sh  phpunit.xml  setup.sh  test_get.sh  test_post.sh  test_put.sh
luminus/: .dockerignore  .env  Dockerfile  README.md  build.clj  deps.edn  setup.sh  test_delete.sh  test_get.sh  test_post.sh  test_put.sh
phoenix/: .dockerignore  Dockerfile  README.md  mix.exs  setup.sh  test_delete.sh  test_get.sh  test_post.sh  test_put.sh
rails/: .dockerignore  .gitignore  Dockerfile  Gemfile  (+6 more)
servant/: .dockerignore  .gitignore  Dockerfile  README.md  cabal.project  cards-project.cabal  gotogit.sh  schema.sql  setup.sh  test_delete.sh  test_get.sh  test_post.sh  test_put.sh
servant/.github/workflows/: ci.yml
servant/app/: Main.hs
servant/src/CardsProject/: App.hs  Db.hs
servant/src/CardsProject/Cards/: CardAbilityHandler.hs  CardAbilityService.hs  CardHandler.hs  CardRulingHandler.hs  CardRulingService.hs  CardService.hs  CardSetHandler.hs  CardSetService.hs  DeckCardHandler.hs  DeckCardService.hs  DeckHandler.hs  DeckService.hs  DeckSideboardCardHandler.hs  DeckSideboardCardService.hs  DeckTagAssignmentHandler.hs  DeckTagAssignmentService.hs  DeckTagHandler.hs  DeckTagService.hs  Types.hs
servant/src/CardsProject/Content/: ArticleCommentHandler.hs  ArticleCommentService.hs  ArticleHandler.hs  ArticleService.hs  ArticleTagAssignmentHandler.hs  ArticleTagAssignmentService.hs  ArticleTagHandler.hs  ArticleTagService.hs  DraftParticipantHandler.hs  DraftParticipantService.hs  DraftPickHandler.hs  DraftPickService.hs  DraftSessionHandler.hs  DraftSessionService.hs  StreamHandler.hs  StreamService.hs  Types.hs
servant/src/CardsProject/Marketplace/: CardPriceHistoryHandler.hs  CardPriceHistoryService.hs  CouponHandler.hs  CouponService.hs  OrderHandler.hs  OrderItemHandler.hs  OrderItemService.hs  OrderService.hs  ProductHandler.hs  ProductService.hs  TradeBidHandler.hs  TradeBidService.hs  TradeDisputeHandler.hs  TradeDisputeService.hs  TradeTransactionHandler.hs  TradeTransactionService.hs  TradelistingHandler.hs  TradelistingService.hs  Types.hs
servant/src/CardsProject/Players/: AchievementHandler.hs  AchievementService.hs  CraftingIngredientHandler.hs  CraftingIngredientService.hs  CraftingRecipeHandler.hs  CraftingRecipeService.hs  FriendshipHandler.hs  FriendshipService.hs  PlayerAchievementHandler.hs  PlayerAchievementService.hs  PlayerCollectionHandler.hs  PlayerCollectionService.hs  PlayerHandler.hs  PlayerSeasonStatsHandler.hs  PlayerSeasonStatsService.hs  PlayerService.hs  Types.hs
servant/src/CardsProject/Tournaments/: AwardedPrizeHandler.hs  AwardedPrizeService.hs  GameHandler.hs  GameService.hs  MatchHandler.hs  MatchService.hs  SeasonHandler.hs  SeasonService.hs  TournamentHandler.hs  TournamentJudgeHandler.hs  TournamentJudgeService.hs  TournamentPrizeHandler.hs  TournamentPrizeService.hs  TournamentRegistrationHandler.hs  TournamentRegistrationService.hs  TournamentRoundHandler.hs  TournamentRoundService.hs  TournamentService.hs  Types.hs
servant/test/CardsProject/Cards/: CardAbilityHandlerSpec.hs  CardHandlerSpec.hs  CardRulingHandlerSpec.hs  CardSetHandlerSpec.hs  DeckCardHandlerSpec.hs  DeckHandlerSpec.hs  DeckSideboardCardHandlerSpec.hs  DeckTagAssignmentHandlerSpec.hs  DeckTagHandlerSpec.hs
servant/test/CardsProject/Content/: ArticleCommentHandlerSpec.hs  ArticleHandlerSpec.hs  ArticleTagAssignmentHandlerSpec.hs  ArticleTagHandlerSpec.hs  DraftParticipantHandlerSpec.hs  DraftPickHandlerSpec.hs  DraftSessionHandlerSpec.hs  StreamHandlerSpec.hs
servant/test/CardsProject/Marketplace/: CardPriceHistoryHandlerSpec.hs  CouponHandlerSpec.hs  OrderHandlerSpec.hs  OrderItemHandlerSpec.hs  ProductHandlerSpec.hs  TradeBidHandlerSpec.hs  TradeDisputeHandlerSpec.hs  TradeTransactionHandlerSpec.hs  TradelistingHandlerSpec.hs
servant/test/CardsProject/Players/: AchievementHandlerSpec.hs  CraftingIngredientHandlerSpec.hs  CraftingRecipeHandlerSpec.hs  FriendshipHandlerSpec.hs  PlayerAchievementHandlerSpec.hs  PlayerCollectionHandlerSpec.hs  PlayerHandlerSpec.hs  PlayerSeasonStatsHandlerSpec.hs
servant/test/CardsProject/Tournaments/: AwardedPrizeHandlerSpec.hs  GameHandlerSpec.hs  MatchHandlerSpec.hs  SeasonHandlerSpec.hs  TournamentHandlerSpec.hs  TournamentJudgeHandlerSpec.hs  TournamentPrizeHandlerSpec.hs  TournamentRegistrationHandlerSpec.hs  TournamentRoundHandlerSpec.hs
(+3448 files in other folders)
